--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   },
   "dependencies": {
     "reset-css": "^5.0.1",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@iconify-json/carbon": "^1.1.7",
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "@unocss/preset-icons": "^0.45.21",
+    "@unocss/preset-typography": "^0.45.21",
     "@vitejs/plugin-vue": "^3.0.1",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
