--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@7.6.0",
   "scripts": {
     "dev": "vite --host",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite-ssg build",
     "preview": "vite preview",
     "lint:check": "pnpm prettier --check .",
     "lint:format": "pnpm prettier --write .",
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "reset-css": "^5.0.1",
+    "@unocss/reset": "^0.45.21",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -26,6 +26,7 @@
     "@unocss/preset-icons": "^0.45.21",
     "@unocss/preset-typography": "^0.45.21",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@vueuse/head": "^0.7.11",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -36,6 +37,7 @@
     "typescript": "^4.7.4",
     "unocss": "^0.45.21",
     "vite": "^3.0.2",
+    "vite-ssg": "^0.20.2",
     "vue-tsc": "^0.38.9"
   },
   "lint-staged": {
