--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint:check": "pnpm prettier --check .",
     "lint:format": "pnpm prettier --write .",
-    "lint:fix": "eslint --ext .tsx,.ts,.js,.vue --fix ./src --fix",
+    "lint:fix": "eslint --ext .ts,.js,.vue --fix ./src --fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -42,6 +42,6 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
-    "*.{js,ts,tsx,vue}": "eslint --ext .tsx,.ts,.js,.vue --fix ./src"
+    "*.{js,ts,tsx,vue}": "eslint --ext .ts,.js,.vue --fix ./src"
   }
 }
