--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,18 @@
     "@typescript-eslint/no-explicit-any": "off",
     "no-console": "warn",
     "arrow-body-style": "error",
-    "prefer-template": "error"
+    "prefer-template": "error",
+    "no-multiple-empty-lines": [
+      "error",
+      { "max": 1, "maxBOF": 0, "maxEOF": 0 }
+    ],
+    "vue/padding-line-between-blocks": ["error", "always"],
+    "vue/component-tags-order": [
+      "error",
+      {
+        "order": ["script", "template", "style"]
+      }
+    ]
   },
   "parser": "vue-eslint-parser",
   "parserOptions": {
