--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.45.21",
+    "@vercel/analytics": "^0.1.8",
     "vue": "^3.2.37"
   },
   "devDependencies": {
