--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite-ssg build",
     "preview": "vite preview",
-    "lint": "pnpm lint:fix & pnpm lint:format",
-    "lint:check": "pnpm prettier --check .",
-    "lint:format": "pnpm prettier --write .",
-    "lint:fix": "eslint --ext .ts,.js,.vue --fix ./src --fix",
+    "lint": "eslint . --fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -20,20 +17,16 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@iconify-json/carbon": "^1.1.16",
+    "@lmmmmmm/eslint-config": "^0.0.3",
+    "@lmmmmmm/eslint-config-vue": "^0.0.3",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
     "@unocss/preset-icons": "^0.50.4",
     "@unocss/preset-typography": "^0.50.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/head": "^1.1.19",
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
     "typescript": "^4.9.5",
     "unocss": "^0.50.4",
     "vite": "^4.1.4",
@@ -41,7 +34,6 @@
     "vue-tsc": "^1.2.0"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown",
-    "*.{js,ts,tsx,vue}": "eslint --ext .ts,.js,.vue --fix ./src"
+    "*.{js,ts,tsx,vue}": "eslint . --fix"
   }
 }
