--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": ["@lmmmmmm", "@lmmmmmm/eslint-config-vue"]
+  "extends": ["@lmmmmmm", "@lmmmmmm/eslint-config-vue"],
+  "rules": {
+    "vue/dot-location": "off"
+  }
 }
