--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite-ssg build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "prepare": "husky install"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@unocss/reset": "^0.51.13",
@@ -25,15 +24,10 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vueuse/head": "^1.1.26",
     "eslint": "^8.40.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
     "typescript": "^5.0.4",
     "unocss": "^0.51.13",
     "vite": "^4.3.8",
     "vite-ssg": "^0.22.2",
     "vue-tsc": "^1.6.5"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx,vue}": "eslint . --fix"
   }
 }
