--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.0.4",
     "unocss": "^0.51.13",
     "vite": "^4.3.8",
+    "vite-plugin-open-graph": "^1.1.5",
     "vite-ssg": "^0.22.2",
     "vue-tsc": "^1.6.5"
   }
