--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lmmmmmm.me",
+  "type": "module",
   "packageManager": "pnpm@8.6.11",
   "scripts": {
     "dev": "vite --host",
@@ -12,11 +13,8 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.7",
-    "@commitlint/config-conventional": "^17.6.7",
+    "@antfu/eslint-config": "1.0.0-beta.18",
     "@iconify-json/carbon": "^1.1.18",
-    "@lmmmmmm/eslint-config": "^0.3.0",
-    "@lmmmmmm/eslint-config-vue": "^0.3.0",
     "@types/node": "^20.0.0",
     "@unocss/preset-icons": "^0.54.1",
     "@unocss/preset-typography": "^0.54.1",
