--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "unocss": "^0.58.3",
     "vite": "^5.0.11",
     "vite-plugin-open-graph": "^2.0.4",
+    "vite-plugin-vue-devtools": "^7.0.6",
     "vite-ssg": "^0.23.6",
     "vue-tsc": "^1.8.27"
   }
