--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vue": "^3.4.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "1.0.0-beta.27",
+    "@antfu/eslint-config": "^2.6.4",
     "@iconify-json/carbon": "^1.1.27",
     "@types/node": "^20.10.6",
     "@unocss/preset-icons": "^0.58.3",
