--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@antfu/eslint-config": "^2.20.0",
     "@iconify-json/carbon": "^1.1.35",
     "@types/node": "^20.14.2",
+    "@unocss/eslint-plugin": "^0.61.0",
     "@unocss/preset-icons": "^0.60.4",
     "@unocss/preset-typography": "^0.60.4",
     "@vitejs/plugin-vue": "^5.0.5",
