--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lmmmmmm.me",
   "type": "module",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.6.2",
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite-ssg build",
@@ -9,25 +9,25 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@unocss/reset": "^66.0.0",
+    "@unocss/reset": "^66.1.0-beta.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.3.0",
+    "@antfu/eslint-config": "^4.8.1",
     "@iconify-json/carbon": "^1.2.8",
-    "@types/node": "^22.13.5",
-    "@unocss/eslint-plugin": "^66.0.0",
-    "@unocss/preset-icons": "^66.0.0",
-    "@unocss/preset-typography": "^66.0.0",
+    "@types/node": "^22.13.10",
+    "@unocss/eslint-plugin": "^66.1.0-beta.3",
+    "@unocss/preset-icons": "^66.1.0-beta.3",
+    "@unocss/preset-typography": "^66.1.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vueuse/head": "^2.0.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "typescript": "5.6.2",
-    "unocss": "^66.0.0",
-    "vite": "^6.2.0",
+    "unocss": "^66.1.0-beta.3",
+    "vite": "^6.2.1",
     "vite-plugin-open-graph": "^2.0.6",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vite-ssg": "^25.2.0",
-    "vue-tsc": "^2.2.4"
+    "vue-tsc": "^2.2.8"
   }
 }
