--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lmmmmmm.me",
   "type": "module",
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.10.0",
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite-ssg build",
@@ -9,25 +9,25 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@unocss/reset": "^66.1.0-beta.11",
+    "@unocss/reset": "^66.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.12.0",
+    "@antfu/eslint-config": "^4.12.1",
     "@iconify-json/carbon": "^1.2.8",
-    "@types/node": "^22.14.1",
-    "@unocss/eslint-plugin": "^66.1.0-beta.11",
-    "@unocss/preset-icons": "^66.1.0-beta.11",
-    "@unocss/preset-typography": "^66.1.0-beta.11",
+    "@types/node": "^22.15.12",
+    "@unocss/eslint-plugin": "^66.1.0",
+    "@unocss/preset-icons": "^66.1.0",
+    "@unocss/preset-typography": "^66.1.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vueuse/head": "^2.0.0",
-    "eslint": "^9.24.0",
+    "eslint": "^9.26.0",
     "typescript": "5.6.2",
-    "unocss": "^66.1.0-beta.11",
-    "vite": "^6.2.6",
+    "unocss": "^66.1.0",
+    "vite": "^6.3.5",
     "vite-plugin-open-graph": "^2.0.6",
-    "vite-plugin-vue-devtools": "^7.7.2",
+    "vite-plugin-vue-devtools": "^7.7.6",
     "vite-ssg": "^26.1.1",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.10"
   }
 }
